manifests/tenants/my-tenant/mail/stalwart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stalwart
  namespace: my-tenant-mail
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: mail.TEMPLATE_DOMAIN
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mail.TEMPLATE_DOMAIN
      secretName: stalwart-tls
  rules:
    - host: mail.TEMPLATE_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stalwart
                port:
                  number: 8080
